--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
     <string name="title_activity_fullscreen">FullscreenActivity</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="title_current_mission">Current Mission</string>
+    <string name="title_locator">Locator</string>
+    <string name="title_stats">Stats</string>
+    <string name="title_leaderBoard">LeaderBoard</string>
 </resources>
