--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,27 @@
     <string name="title_locator">Locator</string>
     <string name="title_stats">Stats</string>
     <string name="title_leaderBoard">LeaderBoard</string>
+
+
+    <string name="title_activity_welcome">Home Screen</string>
+    <string name="next">NEXT</string>
+    <string name="skip">SKIP</string>
+    <string name="start">GOT IT</string>
+
+    <string name="slide_1_title">Hello Gangsta!</string>
+    <string name="slide_1_desc">Message</string>
+
+    <string name="slide_2_title">Title2</string>
+    <string name="slide_2_desc">Message</string>
+
+    <string name="slide_3_title">Title3</string>
+    <string name="slide_3_desc">Message</string>
+
+    <string name="slide_4_title">Title4</string>
+    <string name="slide_4_desc">Message</string>
+
+    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
+    <string name="play_again">Play Again</string>
+
+
 </resources>
