--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="title_locator">Locator</string>
     <string name="title_stats">Stats</string>
     <string name="title_leaderBoard">LeaderBoard</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
